--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "startdev": "nodemon ./src/backend/server.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.3",
+    "@tanstack/react-query-devtools": "^5.61.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,6 +21,7 @@
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13"
   },
