--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13"
   },
@@ -38,6 +39,7 @@
     "globals": "^15.9.0",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.1",
     "vite-plugin-eslint": "^1.8.1"
